# ByteTrack_ncnn_Android

./: README.md  local.properties
app/src/main/assets/: bytetrack-nano.param  bytetrack-tiny.param
app/src/main/java/com/tencent/ncnnyolox/: MainActivity.java
app/src/main/jni/: BYTETracker.cpp  BYTETracker.h  CMakeLists.txt  dataType.h  utils.cpp  yolox.cpp  yolox.h  yoloxncnn.cpp
app/src/main/res/values/: strings.xml
